# doojon

./: docker-compose.override.yml  docker-compose.yml  nginx.override.conf
.github/workflows/: accounts-ci.yml  accounts.yml  check-doojon.yml  doojon.yml  doojonf.yml
accounts/: .env  Accounts.toml  Cargo.toml  Log4rs.toml  diesel.toml  dockerfile
accounts-fe/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
accounts-fe/.devcontainer/: devcontainer.json  dockerfile
accounts-fe/src/: index.html
accounts/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml  docker-compose.yml  dockerfile
accounts/migrations/2021-03-13-084935_create_accounts/: up.sql
accounts/migrations/2021-06-20-150625_create_sessions/: down.sql  up.sql
accounts/src/: entities.rs  main.rs  model.rs  tests.rs  web_errors.rs
accounts/src/accounts/: api.rs  app.rs  config.rs  controllers.rs  helpers.rs  lib.rs  model.rs
accounts/src/accounts/controllers/: accounts.rs  auth.rs  test_account.rs
accounts/src/accounts/model/: dataservices.rs  mod.rs  schema.rs  service_errors.rs  services.rs
accounts/src/accounts/model/dataservices/: accounts.rs  mod.rs  sessions.rs
accounts/src/accounts/model/services/: auth.rs  test_account.rs
accounts/src/controller/: account.rs  auth.rs
accounts/src/controllers/: account.rs
accounts/src/model/: errors.rs  models.rs  schema.rs
accounts/src/model/service/: account.rs
accounts/src/model/services/: account.rs
accounts/tests/: basic.rs
ansible/: hosts  pb.k8s.yml  pb.minikube.yml  requirements.yml
ansible/.devcontainer/: devcontainer.json  dockerfile
clients/doojonf/: README.md  angular.json  karma.conf.js  (+3 more)
dockerfiles/: accounts.Dockerfile  doojonf.Dockerfile
doojon/: .gitignore  .perlcriticrc  README.md  cpanfile  cpanfile.snapshot  dockerfile  doojon.json  doojon.sql  doojon.yml  migrations.sql  openapi.yml  package-lock.json  package.json  tsconfig.json
doojon.js/: .prettierrc.json  doojon.json  package-lock.json  package.json
doojonf/: .prettierrc.json  README.md  angular.json  package-lock.json  package.json  proxy.conf.json
pixel/: .gitignore  Cargo.toml  Pixel.toml
(+426 files in other folders)
