[package]
name = "accounts"
version = "0.1.0"
authors = ["anton <tosha.fedotov.2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "2.2.0"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
log = "0.4.0"
pbkdf2 = "0.7"
r2d2 = "0.8.9"
r2d2_redis = "*"
rand = "*"
rand_core = { version = "0.6", features = ["std"] }
redis = "*"
serde = "1"
uuid = { version = "0.8", features = ["serde"] }
