[package]
name = "accounts"
version = "0.1.0"
authors = ["anton <tosha.fedotov.2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "*"
actix-web = "*"
chrono = { version = "*", features = ["serde"] }
diesel = { version = "*", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
diesel_migrations = "*"
dotenv = "*"
env_logger = "*"
log = "*"
pbkdf2 = "*"
r2d2 = "*"
r2d2_redis = "*"
rand = "*"
rand_core = { version = "*", features = ["std"] }
redis = "*"
serde = "*"
uuid = { version = "*", features = ["serde"] }
