[package]
name = "accounts"
version = "0.1.0"
authors = ["Anton Fedotov <tosha.fedotov.2000@gmail.com>"]
edition = "2018"

[lib]
name = "accounts"
path = "src/accounts/lib.rs"

[[bin]]
name = "accounts"
path = "src/bin/accounts/main.rs"


[dependencies]
actix-rt = "2.2.0"
actix-web = "3.3.2"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.33.3"
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
diesel_migrations = "1.4.0"
log4rs = { version = "1.0.0", features = ["toml_format"] }
pbkdf2 = "0.8.0"
r2d2 = "0.8.9"
rand_core = { version = "0.6.3", features = ["std"] }
serde = "1.0.126"
time = { version = "0.2.27", features = ["std"] }
toml = "0.5.8"
uuid = { version = "0.8.2", features = ["serde"] }
